src/test/ui-fulldeps/proc-macro/load-panic.stderr
error: proc-macro derive panicked
  --> $DIR/load-panic.rs:16:10
   |
16 | #[derive(A)]
   |          ^
   |
   = help: message: nope!

